--- a/index.html
+++ b/index.html
@@ -1544,6 +1544,21 @@ body {
 .tamano-texto-l {
   font-size: 1.25em !important;
 }
+
+/* ✅ UNIFORMIZAR ALTURA DE TODOS LOS SELECTORES DE FILTRO */
+.filter-select,
+input.search-bar {
+  padding: 8px 12px !important;      /* Compacto como en #saldos */
+  font-size: 0.9rem !important;
+  height: auto !important;
+  min-height: 36px !important;       /* Altura mínima coherente */
+  line-height: 1.3 !important;
+  border: 2px solid #e5e7eb !important;
+  border-radius: 8px !important;
+  background: white !important;
+  color: #374151 !important;
+  box-sizing: border-box !important;
+}
 </style>
 </head>
 <body>
@@ -1762,7 +1777,7 @@ body {
 			  </div>
 			  <div>
 				<label style="display:block;margin-bottom:8px;font-weight:600;font-size:0.95rem;color:white;">Unidad</label>
-				<select id="consolidadoUnidad" class="filter-select" style="width:100%;">
+				<select id="consolidadoUnidad" class="filter-select">
 				  <option value="">Seleccione...</option>
 				  <option value="mebuc">MEBUC</option>
 				  <option value="desan">DESAN</option>
@@ -1847,7 +1862,7 @@ body {
 		  </div>
 
 		  <!-- Formulario para Editar/Agregar Presupuesto (oculto por defecto) -->
-		  <di<div class="section-card saldos-section" id="adminFormSection" style="display:none;">
+		  <div class="section-card saldos-section" id="adminFormSection" style="display:none;">
 			<div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:15px;">
 			  <h3 style="color:#06402b;margin:0;"><i class="fas fa-edit"></i> <span id="tituloFormulario">Agregar Presupuesto</span></h3>
 			  <button id="btnLimpiarForm" class="btn-secondary" style="padding:6px 12px;font-size:0.85rem;background:#6b7280;color:white;border:none;border-radius:6px;cursor:pointer;display:none;">
@@ -3861,7 +3876,7 @@ body {
 	
 	// 🔐 Control de acceso para modo administrador en Saldos Presupuestales
 	let isAdminMode = false;
-	const ADMIN_PASSWORD = "123456789"; // 👈 ¡Cambia esto!
+	const ADMIN_PASSWORD = "Santatsop1703" 
 
 	// ========== VARIABLES GLOBALES ==========
 	let appData = {
